# huiswerk

./: 1_10.cpp  1_10_2.cpp  1_11.cpp  1_5.cpp  1_5.h  1_6.cpp  1_6.h  1_8.cpp  1_9.cpp  2_10.cpp  2_11.cpp  2_12.cpp  2_14.cpp  2_6.cpp  2_7.cpp  2_8.cpp  2_9.cpp  3_12.cpp  3_3.cpp  3_4.cpp  3_6.cpp  3_7.cpp  3_8.cpp  3_9.cpp  6_3.cpp  6_3.h  6_8.cpp  CMakeLists.txt  Collatz.cpp  README.md  functions.hpp  main.cpp  testen.cpp  testing.cpp
week1/: 1_10_2.cpp  1_6.cpp  1_7.cpp  1_8.cpp
week2/: 2_10.cpp  2_11.cpp  2_12.cpp  2_13.cpp  2_14.cpp  2_5.cpp  2_9.cpp
week3/: 3_10.cpp  3_11.cpp  3_12.cpp  3_3.cpp  3_5.cpp  3_9.cpp
week4/: student.txt
week4/4_1/: 4_1.cpp  tosti  tosti.txt
week4/4_2/: main  main.cpp  winners.cpp  winners.hpp
week4/4_4/: main.cpp  queue.cpp  queue.hpp
week4/4_5/: compress  compress.cpp  destination.txt  source.txt
week4/4_6/: cycle  cycle.cpp
week4/4_7/: gemiddelde  main.cpp
week5/5_1/: 5_1.cpp  5_1.txt
week5/5_2/: 5_2.cpp  5_2.txt  test
week5/5_3/: 5_3.cpp  5_3.txt  test
week5/5_4/: 5_4.cpp  fibonacci  test
week5/5_6/: 5_6.cpp  test
week5/5_7/: 5_7.cpp  test
