cmake_minimum_required(VERSION 3.13)
project(untitled1)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled1 1_5.cpp 1_6.cpp main.cpp 1_5.h 1_6.h testing.cpp testing.h testen.cpp 6_3.cpp 6_3.h 1_7.cpp functions.hpp 1_8.cpp 1_9.cpp 1_10.cpp 1_11.cpp 6_8.cpp 2_5.cpp 2_6.cpp 2_7.cpp 2_8.cpp 2_9.cpp 2_10.cpp 2_11.cpp 2_12.cpp 2_13.cpp 2_14.cpp 1_10_2.cpp 3_3.cpp)